Add db_type, db_file_path Remove env var DROOLS_HA_DB_TYPE, DROOLS_HA_H2_FILE Remove system property ha.db.type Use filed backed H2 db instead of in-memory